Fixed readability issue on Extension Manager for Dark themes (cyborg, darkly, slate, superhero and solar)
Special thanks to @Miro-Collas for suggested patch

#368, #391

--- a/css/template.less
+++ b/css/template.less
@@ -695,6 +695,17 @@ body {
     #config__manager .outkey {
       color: #fff !important;
     }
+    #extension__list {
+      ul.extensionList li {
+        color: inherit;
+      }
+      .legend {
+        color: inherit;
+      }
+      p {
+        color: inherit;
+      }
+    }
   }
 
 }
